k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primevideo-deployment
  namespace: primevideo
spec:
  selector:
    matchLabels:
      app: primeapp
  template:
    metadata:
      labels:
        app: primeapp
    spec:
      containers:
      - name: primeapp
        image: rishindra2308/primevideoclone:latest
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"  # Increased from 128Mi
        ports:
        - containerPort: 3000
