k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: primevideo-service
  namespace: primevideo
spec:
  selector:
    app: primeapp
  ports:
  - port: 3000
    targetPort: 3000
