k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primevideo-ingress
  namespace: primevideo
  labels:
    app.kubernetes.io/name: primevideo-ingress
spec:
  rules:
  - host: app.rishindra.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: primevideo-service
            port: 
              number: 3000
